<resources>
    <string name="app_name">itemCrud2023</string>
    <string name="item_no">item no</string>
    <string name="description">description</string>
    <string name="save">save</string>
    <string name="search">search</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="view">view</string>
    <string name="choose_image">Choose Image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>